--- a/resource_packs/mutated/texts/en_US.lang
+++ b/resource_packs/mutated/texts/en_US.lang
@@ -1,2 +1,2 @@
-entity.mutate:mutated.name=mutated
+entity.mutate:mutated_boss.name=mutated
 item.spawn_egg.entity.mutate:mutated_boss=Spawn mutated
