添加了出场动画和再生，修复了实体和蛋的名字，修复了创造模式仍旧跟踪的问题，优化了技能冷却

--- a/resource_packs/mutated/texts/en_US.lang
+++ b/resource_packs/mutated/texts/en_US.lang
@@ -1,2 +1,2 @@
-entity.mutate:mutated.name=mutated
-item.spawn_egg.entity.mutate:mutated_boss=Spawn mutated
+entity.mutate:mutated_boss.name=Mutated Boss
+item.spawn_egg.entity.mutate:mutated_boss.name=Mutated_Boss_spawn_egg
